Update error message format
